# azure-functions-python-poetry

./: .gitignore  README.md  host.json  local.settings.json-example  pyproject.toml
HttpFunction/: __init__.py
QueueFunction/: __init__.py  function.json  readme.md
